--- a/pages/found/found.wxss
+++ b/pages/found/found.wxss
@@ -1,47 +1,116 @@
-page{
-    height:100%;
+page {
+    height: 100%;
 }
-.container{
-    background-color:#fff;
+
+.container {
+    background-color: #F5F5F5;
     position: relative;
-}
-
-
-.van-tabs__line{
-background-color:#1EC19A !important;
+    display: flex;
+    flex-direction: column;
 
 }
-.container .van-tabs__wrap{
-    max-width:400rpx;
-    margin:0 auto;
 
-}.container .van-sticky-wrap {
 
-    background:#fff;
-}
-.container .flex-box{
+/*.van-tabs__line{*/
+/*background-color:#1EC19A !important;*/
+
+/*}*/
+/*.container .van-tabs__wrap{*/
+/*    max-width:400rpx;*/
+/*    margin:0 auto;*/
+
+/*}.container .van-sticky-wrap {*/
+
+/*    background:#fff;*/
+/*}*/
+.container .flex-box {
 
     align-items: center;
 }
-.btn-box{
-    position:fixed;
-    right:32rpx;
+
+.container .van-tabs__nav--card .van-tab {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-right: 0;
+}
+
+.container .van-tabs__nav--card {
+
+    border: 0;
+}
+
+.btn-box {
+    position: fixed;
+    right: 32rpx;
     bottom: 100rpx;
     width: 84rpx;
     height: 84rpx;
     background: #32CBA6;
     box-shadow: 0 4rpx 24rpx 0px rgba(30, 193, 154, 0.22);
     border-radius: 50%;
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.container .flex-box .van-sticky{
-    min-width:750rpx;
-    border-bottom:2rpx solid #EDEDED;
-    height:50px !important;
+.container .flex-box .van-sticky {
+    min-width: 750rpx;
+    border-bottom: 2rpx solid #EDEDED;
+
 }
-.content{
-    max-width:750rpx;
+
+.container .van-tabs__scroll--card {
+    margin: 0;
+
+}
+
+.content {
+    max-width: 750rpx;
+    padding: 0 32rpx;
+    text-align: center;
+}
+
+.item {
+    background: #fff;
+    border-radius: 12rpx;
+    width: 100%;
+    min-height: 200rpx;
+    margin-top: 30rpx;
+    display: flex;
+    padding: 20rpx;
+    box-sizing: border-box;
+}
+
+.item .right_part {
+    flex: 1;
+    margin-right: 30rpx;
+    padding: 10rpx;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    text-align: left;
+
+}
+
+.item .right_part .title {
+    font-weight: 500;
+    font-size: 32rpx;
+}
+
+.item .right_part .dec {
+    font-size: 24rpx;
+    color: #666;
+}
+
+.img {
+    width: 200rpx;
+    height: 200rpx;
+    border-radius: 8rpx;
+}
+
+.container .van-tabs__wrap {
+    height: 80rpx !important;
+    display: flex;
+    align-items: center;
 }
