--- a/pages/matchTeacher/match.wxss
+++ b/pages/matchTeacher/match.wxss
@@ -1,7 +1,19 @@
 page{
     height:100%;
 }
+.customBtn1{
+    border-radius: 46rpx;
+    border: 2rpx solid #1EC19A;
+    color: #1EC19A;
+    font-size: 32rpx;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:200rpx;
+    height:80rpx;
 
+}
 
 .match{
     display:flex;
@@ -33,8 +45,10 @@ page{
     min-height:600rpx;
     background:#fff;
     border-radius:30rpx;
-    padding:40rpx 20rpx;
+    padding:40rpx 20rpx 80rpx;
 
+    max-height: 900rpx;
+    overflow-y:auto;
 }.box .title{
    font-weight: 600;
     color:#333;
@@ -51,17 +65,16 @@ page{
 
  .btn_group{
      display:flex;
+     position:absolute;
+     bottom:-20rpx;
+     width:100%;
+     justify-content: center;
+     left:0;
  }
-.btn_group .customBtn1{
-    border-radius: 46rpx;
-    border: 2rpx solid #1EC19A;
-    color: #1EC19A;
-    font-size: 32rpx;
-    font-weight: 600;
+
+
+.btn_group .defaultBtn{
     width:200rpx;
     height:80rpx;
- }
-
-..btn_group .defaultBtn{
-
+    margin-left:20rpx;
 }
