--- a/pages/matchTeacher/match.wxml
+++ b/pages/matchTeacher/match.wxml
@@ -1,19 +1,20 @@
 <view class="match">
-    <view class="defaultBtn match_btn" wx:if="{{step==0}}"
+    <image src="../../images/bear/pipei.png" style="position:fixed;width:750rpx;Object-fit:cover"></image>
+    <view class="defaultBtn match_btn" wx:if="{{step==-1}}"
           data-type="2"
-          data-step="0"
+          data-step="-1"
           bindtap="setStep">
         教师匹配
     </view>
     <view wx:else>
         <view
-              wx:for="{{multiArray}}" style=" position:relative;">
-            <view class="box" wx:if="{{step==index}}" animation="{{animationData}}">
+              wx:for="{{multiArray}}" >
+            <view class="box" wx:if="{{step==index}}" animation="{{animationData}}" style=" position:relative;">
                 <view class="title">
                     {{item}}
                 </view>
 <!--                bindtap="getNextCateGory"-->
-                <view class="flex-center flex-colomn">
+                <view class="flex-center flex-colomn" style="overflow-y:scroll;max-height:600rpx;">
                     <view class="{{activeIndex==index?'defaultBtn':'customBtn1'}} category_btn "
                           bindtap="chooseCurrentItem"
                           data-current="{{index}}"
