--- a/pages/matchTeacher/match.wxss
+++ b/pages/matchTeacher/match.wxss
@@ -20,7 +20,7 @@ page{
     align-items: center;
     justify-content: center;
     height: 100%;
-    background: rgba(0,0,0,.5);
+    background: #304653;
 }
 
 .match_btn{
