--- a/pages/training-space/index.wxml
+++ b/pages/training-space/index.wxml
@@ -59,7 +59,7 @@
             <view class="dec">
                 <text style="color:#999">上课时间：</text>
                 <text>{{teacher.weekTime}}</text>
-                <text>({{teacher.orderTime[0] +':00'}}~{{teacher.orderTime[teacher.orderTime.length-1]+':00'}})</text>
+                <text wx:if="{{teacher.receivingType==2}}">({{teacher.orderTime[0] +':00'}}~{{teacher.orderTime[teacher.orderTime.length-1]+':00'}})</text>
             </view>
 <!--            advantage: "擅长1-6年级冲刺/培优"-->
 <!--            createTime: "2020-12-26 10:03:51"-->
