--- a/pages/addResume/index.wxml
+++ b/pages/addResume/index.wxml
@@ -14,7 +14,7 @@
             <view>年龄</view>
             <view class="flex-center">
                 <input placeholder="请输入年龄"
-                       :value="{{query.age}}"
+                       value="{{query.age}}"
                        type='number' data-item="age" bindblur='getChangeValuse'/>
             </view>
         </view>
@@ -31,7 +31,7 @@
             <view class="flex-center">
                 <textarea placeholder="请输入个人优势"
                           auto-height
-                          :value="{{query.advantage}}"
+                          value="{{query.advantage}}"
                           data-item="advantage"
                           bindblur='getChangeValuse'/>
             </view>
@@ -41,7 +41,7 @@
             <view class="flex-center">
                 <textarea placeholder="请输入本科经历"
                           auto-height
-                          :value="{{query.undergraduate}}"
+                          value="{{query.undergraduate}}"
                           data-item="undergraduate" bindblur='getChangeValuse'/>
             </view>
         </view>
@@ -50,7 +50,7 @@
             <view class="flex-center">
                 <textarea placeholder="请输入研究生经历"
                           auto-height
-                          :value="{{query.postgraduate}}"
+                          value="{{query.postgraduate}}"
                           data-item="postgraduate" bindblur='getChangeValuse'/>
             </view>
         </view>
@@ -59,7 +59,7 @@
             <view class="flex-center">
                 <textarea placeholder="请输入其他学业成就"
                           auto-height
-                          :value="{{query.other}}"
+                          value="{{query.other}}"
                           data-item="other" bindblur='getChangeValuse'/>
             </view>
         </view>
@@ -68,7 +68,7 @@
             <view class="flex-center">
                 <textarea placeholder="请输入工作经历"
                           auto-height
-                          :value="{{query.working}}"
+                          value="{{query.working}}"
                           data-item="working" bindblur='getChangeValuse'/>
             </view>
         </view>
@@ -77,7 +77,7 @@
             <view class="flex-center">
                 <textarea placeholder="请输入自我介绍"
                           auto-height
-                          :value="{{query.introduce}}"
+                          value="{{query.introduce}}"
                           data-item="introduce" bindblur='getChangeValuse'/>
             </view>
         </view>
