--- a/pages/toTeacher/teacher.wxml
+++ b/pages/toTeacher/teacher.wxml
@@ -64,8 +64,8 @@
             </view>
         </view>
 
-        <view wx:if="{{query.reason}}">
-            {{query.reason}}
+        <view wx:if="{{query.reason}}" style="margin-top:30rpx;">
+           拒绝原因: <text style="color:'red'">{{query.reason}}</text>
         </view>
     </view>
     <view class="defaultBtn flex-center" bindtap="submitFormData">
