--- a/pages/createOrder/index.wxml
+++ b/pages/createOrder/index.wxml
@@ -46,7 +46,7 @@
                 <view>支付方式</view>
                 <view class="txt2">
                     <radio-group bindchange="selectPayType">
-                        <radio value="1" checked style="margin-right:12rpx;">零钱支付</radio>
+                        <radio value="1" checked style="margin-right:12rpx;">余额支付</radio>
                         <radio value="0">微信支付</radio>
                     </radio-group>
                 </view>
