--- a/pages/setMyClass/index.wxml
+++ b/pages/setMyClass/index.wxml
@@ -31,6 +31,7 @@
             <view class="right-part">
                 <input   class="price" placeholder="请输入您课程的价格"
                          type="number"
+                         value="{{query.orderPrice}}"
                          data-type="orderPrice"
                          bindblur="getOrderPrice"/>
             </view>
@@ -58,7 +59,7 @@
             <view class="flex-box flex-space flex-y-center skill-title">
                 <image src="../../images/icon/cancel2.png" class="cancel" bindtap="closeModal"></image>
                 <view style="font-weight:700">选择上课时间</view>
-                <view class="sure" bindtap="closeModal" data-choose="chooseTime">确定</view>
+                <view class="sure" bindtap="closeModal1" data-choose="chooseTime">确定</view>
             </view>
             <view class="time-list flex-box">
                 <view class="time-head flex-box flex-y-center" bindtap="chooseTimeTum" data-cur="1">
