--- a/pages/groupClassList/index.wxml
+++ b/pages/groupClassList/index.wxml
@@ -6,13 +6,27 @@
         <view class="title flex-box flex-space">
             <view>团课名称:舞蹈</view>
             <view class="state">进行中</view>
-        </view><view class="title flex-box flex-space">
-            <view>团课名称:舞蹈</view>
-            <view class="state">进行中</view>
         </view>
-       <view>团课价格:110000</view>
-       <view>团课人数:舞蹈</view>
-       <view>购买人数:舞蹈</view>
-       <view>课程小时:3小时</view>
+
+       <view  class="row">团课价格:110000</view>
+       <view class="row flex-box flex-space">
+           <view>团课人数:舞蹈</view>
+           <view >购买人数:</view>
+       </view>
+       <view class="row flex-box flex-space">
+           <view>课程小时:3小时</view>
+           <view >节课:3小时</view>
+       </view>
+       <view class="title flex-box flex-space">
+           <view>开始时间:3小时</view>
+       </view>
+
+
+       <view class="row1 flex-box flex-y-center" >
+           <view class="toOrder defaultBtn">
+               去下单
+           </view>
+       </view>
+
    </view>
 </view>
